@@ -5,7 +5,6 @@ Description: Stylesheet of xtec-stats plugin
 */
 
 .xtec-stats {
-	/*Required for UPCNet*/
     border: 1px solid #ddd;
     color: #555;
     font-size: 1em;
@@ -13,14 +12,14 @@ Description: Stylesheet of xtec-stats plugin
     padding: 0.5em;
     text-align: left;
     width: 8em;
+    margin-bottom: 1em;
 }
 
 #footer .xtec-stats {
-	/*Required for UPCNet*/
-	background-color: white;
+    background-color: white;
     border: 1px solid white;
     color: #555 !important;
     font-size: 1em;
     border-radius:2px;
-    padding: 8px;   
+    padding: 8px;
 }
